[refactor] remove loginFilter & create login api